--- a/about.css
+++ b/about.css
@@ -7,7 +7,6 @@ body, html {
 }
 .about{
   font-size: 20px;
-  font-weight: bold;
 }
 
 .locations{
@@ -21,6 +20,7 @@ body, html {
   font-size: 23px;
   float: right;
 }
+
 .underline--magical {
   background-image: linear-gradient(120deg, #f3d9fc 0%, #f3d9fc 100%);
   background-repeat: no-repeat;
@@ -29,20 +29,18 @@ body, html {
   transition: background-size 0.25s ease-in;
 }
 
-.underline--magical1 {
-  background-image: linear-gradient(120deg, #f3d9fc 0%, #f3d9fc 100%);
-  background-repeat: no-repeat;
-  background-size: 100% 0.5em;
-  background-position: 0 100%;
-  transition: background-size 0.25s ease-in;
-}
-
-.underline--magical1:hover{
-  background-size: 100% 88%;
-}
-
 .underline--magical:hover{
   background-size: 100% 88%;
+}
+.placeunderline {
+  background-image: linear-gradient(120deg, #d8f6ff 0%, #d8f6ff 100%);
+  background-repeat: no-repeat;
+  background-size: 100% 0em;
+  background-position: 0 100%;
+  transition: background-size 0.1s ease-in;
+}
+.placeunderline:hover{
+  background-size: 100% 40%;
 }
 .navlinks{
   text-decoration: none;
@@ -51,4 +49,29 @@ body, html {
 .navlinks:hover{
   text-decoration: none;
   color: black;
+}
+.timeline-years{
+  margin-top: 3%;
+  text-align: right;
+  height: 70%;
+  border-right: .3mm solid #c1bfbf;
+}
+.years{
+  color: #757575;
+  text-decoration: none;
+}
+.years:hover{
+  text-decoration: none;
+  color: #757575;
+}
+.timeline-places{
+  margin-top: 3%;
+  text-align: left;
+  height: 70%;
+}
+.places{
+  padding-bottom: 15px;
+}
+.divplaces{
+  color: #757575;
 }
