--- a/style.css
+++ b/style.css
@@ -57,9 +57,19 @@ body, html {
   text-decoration: none;
   color: black;
 }
+
 .navlinks:hover{
   text-decoration: none;
   color: black;
+}
+
+.placelinks{
+  text-decoration: none;
+  color: #757575;
+}
+.placelinks:hover{
+  text-decoration: none;
+  color: #757575;
 }
 .timeline-years{
   margin-top: 3%;
