--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ body, html {
   display: flex;
   align-self: center;
   height: 40%;
-  background: url(scrolling.png) repeat-x 0 center;
+  background: url(scrolling.jpg) repeat-x 0 center;
   background-size: cover;
   margin: 0 auto;
 }
